--- a/_data/fieldguide.yaml
+++ b/_data/fieldguide.yaml
@@ -2,70 +2,70 @@ root: "https://derisking-guide.18f.gov/"
 federal:
   base: "federal-field-guide/"
   usercentereddesign:
-    title: User Centered Design
+    title: User-centered design
     url: basic-principles/#user-centered-design
   agilesoftwaredev:
-    title: Agile Software Development
+    title: Agile software development
     url: basic-principles/#agile-software-development
   productownership:
-    title: Product Ownership
+    title: Product ownership
     url: basic-principles/#product-ownership
   devops:
     title: DevOps
     url: basic-principles/#devops
   building:
-    title: Building with Loosely Coupled Parts
+    title: Building with loosely coupled parts
     url: basic-principles/#building-with-loosely-coupled-parts
   modular:
-    title: Modular Contracting
+    title: Modular contracting
     url: basic-principles/#modular-contracting
   empoweredowner: 
-    title: Empowered Product Owner
+    title: Empowered product owner
     url: planning/#assign-dedicated-and-empowered-product-owners-to-lead-development-efforts
   constantfeedback:
-    title: Seek Constant User Feedback
+    title: Seek constant user feedback
     url: planning/#involve-end-users-early-and-often-in-software-development-efforts
   buildorbuy:
-    title: Tradeoffs in Build-or-Buy
+    title: Tradeoffs in build-or-buy
     url: planning/#consider-tradeoffs-in-build-or-buy-decisions-taking-all-factors-into-consideration
   defaultopen:
-    title: Default to Open
+    title: Default to open
     url: planning/#default-to-open
   infraascode:
-    title: Infrastructure as Code
+    title: Infrastructure as code
     url: planning/#require-infrastructure-as-code-single-command-deployment-and--per-sprint-government-verification-offunctionality
   leadership:
-    title: Leadership Empowering Teams
+    title: Leadership empowering teams
     url: planning/#leadership-should-set-direction-and-empower-teams
   scoping:
-    title: Tightly Scoped Software Development
+    title: Tightly scoped software development
     url: planning/#software-development-efforts-should-be-tightly-scoped-to-reduce-risk-and-avoid-overspending
   path2prod:
-    title: Path to Production
+    title: Path to production
     url: planning/#clear-path-to-production-before-awarding-a-contact
   remotecollab:
-    title: Remote Collaboration Tools
+    title: Remote collaboration tools
     url: planning/#give-teams-access-to-the-remote-collaboration-tools-that-they-need-to-be-successful
   techbudget:
-    title: Invest in Tech Incrementally
+    title: Invest in tech incrementally
     url: planning/#invest-in-technology-incrementally-and-budget-for-risk-mitigation-prototyping
   marketresearch:
-    title: Conduct Modern Market Research
+    title: Conduct modern market research
     url: deciding-what-to-buy/#conduct-modern-market-research
   agilecontractformat:
-    title: Agile Contracts for Agile Procurement
+    title: Agile contracts for agile procurement
     url: deciding-what-to-buy/#use-the-agile-contract-format-to-procure-agile-software-development-services
   contracttype:
-    title: Time and Materials for Agile Software/Services
+    title: Time and materials for agile software/services
     url: deciding-what-to-buy/#use-time-and-material-contract-types-for-custom-agile-software-development-services
   evalproposals:
-    title: Evaluate Proposals based on Best Practices
+    title: Evaluate proposals based on best practices
     url: deciding-what-to-buy/#evaluate-contractor-proposals-based-on-industry-best-practices
   kickoff:
-    title: Host Effective Post-Award Kickoffs
+    title: Host effective post-award kickoffs
     url: doing-the-work/#host-an-effective-post-award-kick-off-meeting-to-energize-folks-for-the-work-to-come
   oversight:
-    title: Oversight of Outcomes
+    title: Oversight of outcomes
     url: doing-the-work/#oversee-agile-projects-by-measuring-end-user-outcomes-instead-of-requiring-project-teams-to-perform-tasks-by-specific-dates
   postadmin:
     title: Post-award contract administration
