edits on c3/c3, fixed typo in derisking guide

--- a/_data/fieldguide.yaml
+++ b/_data/fieldguide.yaml
@@ -113,7 +113,7 @@ state:
     title: Cost of change
     url: budgeting-tech/#minimize-the-cost-of-change
   measuring:
-    title: Measure success =iteratively
+    title: Measure success iteratively
     url: budgeting-tech/#measure-success-based-on-iterative-outcomes-not-project-milestones
   limitspending:
     title: Limit total spending
