adding about to nav

--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -29,6 +29,8 @@ primary_navigation:
           url: /resources/
     - name: About
       children:
+        - name: About the site
+          url: /admin/about/
         - name: Learning cohorts
           url: /admin/learningcohorts/
 
