First pass at removing SO from SOMD
Did a pass through the entire site. References to state officers were
replaced with "product owner." In most cases (not all... :P) this was
done with a macro or two in the _config.yaml. If a different term wants
to be used, these macros might be enough to change the whole site.

A search for "product owner" should be made first, because I think the
first replace or two (lost in the mists of tabs...) were done by hand,
and then I quickly switched to a macro.

--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,21 @@
 # Be sure to edit the values below
 ##########################################################################################
 
-title: State Officer, M.D.
+title: Product Owner, M.D.
 email: matthew.jadud@gsa.gov
 description: >-
-  Pilot materials supporting CMS/SOs in using the Health Tracker.
+  Product ownership, learned in community.
 baseurl: "" 
 # the base hostname & protocol for your site, e.g. http://example.com
 # url: "https://example.gov"
 twitter: 18F
+
+long: Product Owner, M.D.
+short: POMD
+productowner: product owner
+Productowner: Product owner
+po: PO
+
 
 # This is used in meta.html to choose the version of USWDS from
 # the assets directory. It becomes
