--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 ##########################################################################################
 # Be sure to edit the values below
 ##########################################################################################
@@ -23,16 +7,17 @@ email: matthew.jadud@gsa.gov
 description: >-
   Product ownership, learned in community.
 baseurl: "" 
-# the base hostname & protocol for your site, e.g. http://example.com
-# url: "https://example.gov"
 twitter: 18F
+
+##########################################################################################
+# Magic macros for site text.
+##########################################################################################
 
 long: Product Owner, M.D.
 short: POMD
 productowner: product owner
 Productowner: Product owner
 po: PO
-
 
 # This is used in meta.html to choose the version of USWDS from
 # the assets directory. It becomes
@@ -44,10 +29,8 @@ collections_dir: collections
 collections:
   rubric:
     output: true
-    # permalink: /rubric/:slug
   courses:
     output: true
-    # permalink: /course/:slug
   pages:
     output: true
     permalink: /:name/
@@ -56,40 +39,6 @@ collections:
     permalink: /admin/:name/
 
 permalink: pretty
-
-#################################################################
-#
-# Digital Analytics Program (DAP) configuration
-# HHS     - Department of Health and Human Services
-# GSA     - General Services Administration
-#
-#################################################################
-dap:
-  # agency: your-agency
-  # Optional
-  # subagency: your-subagency
-# Configuration for Google Analytics
-ga:
-  # ua: your-ua
-
-# Search.gov configuration
-#
-# 1. Create an account with Search.gov https://search.usa.gov/signup
-# 2. Add a new site.
-# 3. Add your site/affiliate name here.
-# searchgov:
-
-#   # You should not change this.
-#   endpoint: https://search.usa.gov
-
-#   # replace this with your search.gov account
-#   affiliate: federalist-uswds-example
-
-#   # replace with your access key
-#   access_key: xX1gtb2RcnLbIYkHAcB6IaTRr4ZfN-p16ofcyUebeko=
-
-#   # this renders the results within the page instead of sending to user to search.gov
-#   inline: true
 
 ##########################################################################################
 # The values below here are more advanced and should only be
@@ -111,13 +60,6 @@ exclude:
   - Gemfile.lock
   - .github
 
-assets:
-  sources:
-    - node_modules/uswds/dist/img
-    - node_modules/uswds/dist/js
-    - node_modules/uswds/dist/scss
-    - node_modules/netlify-cms/dist
-
 
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
@@ -137,11 +79,11 @@ pagination:
   #permalink: '/page/:num' # Pages are html files, linked jekyll extensionless permalink style.
   # Optional the title format for the paginated pages (supports :title for original page title, :num for pagination page number, :max for total number of pages)
   title: ":title - page :num"
-  # Limit how many pagenated pages to create (default: 0, means all)
+  # Limit how many paginated pages to create (default: 0, means all)
   limit: 0
   # Optional, defines the field that the posts should be sorted on (omit to default to 'date')
   sort_field: "date"
-  # Optional, sorts the posts in reverse order (omit to default decending or sort_reverse: true)
+  # Optional, sorts the posts in reverse order (omit to default descending or sort_reverse: true)
   sort_reverse: true
   # Optional, the default category to use, omit or just leave this as 'posts' to get a backwards-compatible behavior (all posts)
   category: "posts"
