Removing more references, interactivity
Removed airtable forms. Not for general use.

Removed more references to partner.

--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -38,6 +38,6 @@ primary_navigation:
 secondary_navigation:
     - name: Rubric
       url: /rubric/
-    - name: Tracker
-      url: "https://airtable.com/shrsMy2dpZDPbWTXW"
+    - name: 18F
+      url: https://18f.gsa.gov/
       external: true
